# Aether-scape

./: .env.example  .gitignore  demo.py  extract_page_config.py  gitreverse_demo.py  pyproject.toml  server.py  smoke_test.py
aetherscrape/: __init__.py  client.py
aetherscrape/crawler/: __init__.py  manager.py
aetherscrape/engine/: __init__.py  fetcher.py
aetherscrape/intelligence/: __init__.py  extractor.py
aetherscrape/utils/: __init__.py  stealth.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: ActivityFeed.jsx  CentralConsole.jsx  MetricBar.jsx  MetricCards.jsx  PlatformList.jsx  Sidebar.jsx
